--- a/app/src/main/res/layout/recylerview_users.xml
+++ b/app/src/main/res/layout/recylerview_users.xml
@@ -2,54 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_button">
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp">
 
             <ImageView
                 android:background="@drawable/ic_boy"
                 android:id="@+id/imageView"
-                android:layout_width="72dp"
-                android:layout_height="72dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:padding="4dp" />
 
             <TextView
                 android:id="@+id/text_view_name"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="8dp"
                 android:layout_toRightOf="@id/imageView"
-                android:text="Cris"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+                android:textSize="18sp"
+                android:fontFamily="@font/source_sans_pro_semibold"
+                android:text="Cris" />
 
             <TextView
                 android:id="@+id/text_view_email"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text_view_name"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginLeft="8dp"
+                android:fontFamily="@font/source_sans_pro_light"
+                android:layout_marginTop="4dp"
                 android:layout_toRightOf="@id/imageView"
                 android:text="cris@gmail.com"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+                android:textSize="16sp"
+                />
 
             <TextView
                 android:id="@+id/text_view_id"
-                android:layout_below="@id/text_view_email"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_toRightOf="@id/imageView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="ID"/>
+                android:layout_marginRight="8dp"
+                android:layout_alignParentEnd="true"
+                android:hint="ID"
+                android:fontFamily="@font/pt_sans_narrow"
+                android:textSize="12sp"/>
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
