--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#008577"
+    android:background="#FFB000"
+
     android:orientation="vertical"
     tools:context="LoginActivity"
     android:scrollbarAlwaysDrawVerticalTrack="true">
@@ -18,12 +19,13 @@
             android:id="@+id/login_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:elevation="4dp"
+            android:fontFamily="@font/source_sans_pro_semibold"
             android:gravity="center_horizontal"
-            android:text="Account Login"
-            android:textColor="#fff"
-            android:textSize="26sp"
-            android:textStyle="bold"/>
+            android:text="Resident Login"
+            android:textColor="@color/colorAccent"
+            android:textSize="36sp"
+            android:textStyle="bold" />
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -32,7 +34,8 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginTop="70dp"
-            android:background="#fff"
+            android:background="@drawable/rounded_button"
+            android:backgroundTint="#ffff"
             android:elevation="4dp"
             android:orientation="vertical"
             android:padding="20dp">
@@ -45,11 +48,12 @@
 
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/pt_sans_narrow"
                     android:labelFor="@id/text_email"
                     android:text="email"
-                    android:fontFamily="sans-serif-light"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="16sp"/>
 
                 <EditText
                     android:id="@+id/text_email"
@@ -58,6 +62,8 @@
                     android:drawableLeft="@drawable/ic_email"
                     android:drawablePadding="10dp"
                     android:singleLine="true"
+                    android:theme="@style/EditTextTheme"
+                    android:fontFamily="@font/source_sans_pro"
                     android:layout_marginBottom="10dp"
                     android:hint="safehouse@gmail.com"
                     android:inputType="textEmailAddress"/>
@@ -65,18 +71,21 @@
                 <TextView
                     android:labelFor="@id/edit_text_password"
                     android:text="password"
-                    android:fontFamily="sans-serif-light"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/pt_sans_narrow"
+                    android:textSize="16sp"/>
 
 
                 <EditText
                     android:id="@+id/edit_text_password"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:theme="@style/EditTextTheme"
                     android:drawableLeft="@drawable/ic_lock"
                     android:drawablePadding="10dp"
-                    android:hint="Password"
+                    android:hint="password"
+                    android:fontFamily="@font/source_sans_pro"
                     android:inputType="textPassword"
                     android:singleLine="true" />
 
@@ -85,8 +94,10 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="22dp"
-                    android:background="#d67601"
-                    android:text="Log in"
+                    android:background="@drawable/rounded_button"
+                    android:backgroundTint="@color/colorAccent"
+                    android:text="LOGIN"
+                    android:fontFamily="@font/source_sans_pro_semibold"
                     android:textAllCaps="false"
                     android:textColor="#fff"
                     android:textSize="18sp"/>
@@ -103,7 +114,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/user_profile_image_background"
             android:elevation="4dp"
-            android:src="@drawable/ic_boy"/>
+            android:src="@drawable/ic_boy" />
 
     </RelativeLayout>
 
