--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#59D58D</color>
+    <color name="colorAccent">#49330D</color>
 
     <color name="colorHint">#A0A0A0</color>
     <color name="colorText">#6F6F6F</color>
